--- a/index.html
+++ b/index.html
@@ -4,40 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/init.css">
+    <link rel="stylesheet" href="./css/jump.css">
 </head>
 <body>
-    <h2 class="come top">来了？？？？</h2>
-    <h2 class="come left">来了？？？？</h2>
-    <h2 class="come right">来了？？？？</h2>
-    <h2 class="come bottom">来了？？？？</h2>
-    <h1>小黄网欢迎您！！！！！</h1>
-    <button class="change">没有好看的换一组</button>
-    
 
-<!-- 
-    <img src="./asset/1.gif" alt="">
-    <img src="./asset/2.jpg" alt="">
-    <img src="./asset/3.gif" alt="">
-    <img src="./asset/4.jpg" alt=""> -->
-    <!-- <img src="./asset/5.jpg" alt="">
-    <img src="./asset/5.jpg" alt="">
-    <img src="./asset/5.jpg" alt=""> -->
-    <!-- <img src="./asset/6.gif" alt="">
-    <img src="./asset/7.gif" alt="">
-    <img src="./asset/8.jpg" alt=""> -->
-
-
-    <div class="wrapper">
-        <img src="" alt="" class="img1">
-        <img src="" alt="" class="img2">
-        <img src="" alt="" class="img3">
+    <div class="top">
+        <h1>未满十八周岁，禁止入内</h1>
     </div>
 
+    <div class="left">
+        <h2 class="leftContent">
+            <a href="./test.html">男生必看</a>
+        </h2>
+    </div>
 
+    <div class="right">
+        <h2 class="rightContent">
+            <a href="./test.html">女生爱看的</a>
+        </h2>
+    </div>
 
-
-
-    <script src="./index.js"></script>
 </body>
 </html>
